<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ConfirmarDatos">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:gravity="center"
        android:textSize="@dimen/titulo"
        android:layout_marginBottom="@dimen/bottomConfirmar"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/textos"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/fechaN"
        android:textSize="@dimen/textos"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/tel"
        android:textSize="@dimen/textos"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/email2"
        android:textSize="@dimen/textos"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottomConfirmarButton"
        android:text="@string/descripcion2"
        android:textSize="@dimen/textos"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:onClick="editar"
        android:paddingLeft="@dimen/paddingButtonEditar"
        android:paddingRight="@dimen/paddingButtonEditar"
        android:text="@string/editar"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>